added employee-directory.html in total doctor card